edited deploy yaml

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,6 +30,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Debug Kuberconfig Content
+        run: |
+          echo "--- KUBE_CONFIG SECRET CONTENT START ---"
+          echo "${{ secrets.KUBE_CONFIG }}"
+          echo "--- KUBE_CONFIG SECRET CONTENT END ---"
       - name: Set up kubectl
         uses: azure/k8s-set-context@v4
         with:
